package br.unitins.topicos2.dto;


public record CorDTO(
    String nome
    
) { 

}

