package br.unitins.topicos2.dto;

public record FornecedorDTO(
        String nome,
        String dataContrato

) {

}