package br.unitins.topicos2.dto;

public record ItemCompraDTO (
    Integer quantidade,
    Double precoUnitario,
    Long idCamiseta
){
    
}

