package br.unitins.topicos2.dto;

public record UsuarioDTO(
    String username,
    String senha
) {
}